[workspace]
resolver = "2"
members = [
    "stm32-data-gen",
    "stm32-data-serde",
    "stm32-metapac-gen",
    "stm32-data-macros",
]
exclude = [
    "build"
]

[workspace.dependencies]
chiptool = { git = "https://github.com/embassy-rs/chiptool", rev = "030394157b9dd30c48c0e592a52149f501e3c3d4" }

# Optimize for dev experience: shortest "build+run" time after making a small change.
[profile.release]
debug = true
incremental = true
panic = 'abort'
opt-level = 2
