[workspace]
resolver = "2"
members = [
    "stm32-data-gen",
    "stm32-data-serde",
    "stm32-metapac-gen",
    "stm32-data-macros",
]
exclude = [
    "build"
]

[workspace.dependencies]
chiptool = { git = "https://github.com/embassy-rs/chiptool", rev = "93d51064dfcdf28cc758ef9d50b138f511f6a284" }

# Optimize for dev experience: shortest "build+run" time after making a small change.
[profile.release]
debug = true
incremental = true
panic = 'abort'
opt-level = 2
