[package]
name = "stm32-data-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rayon"]
rayon = ["dep:rayon"]

[dependencies]
anyhow = "1.0.70"
glob = "0.3.1"
num = "0.4.0"
quick-xml = { version = "0.26.0", features = ["serialize"] }
regex = "1.7.1"
serde = { version = "1.0.157", features = ["derive"] }
serde_yaml = "0.9.19"
chiptool = { git = "https://github.com/embassy-rs/chiptool", rev = "d29063045446448526e3e0c19857f10e32992386" }
serde_json = "1.0.94"
rayon = { version = "1.7.0", optional = true }
stm32-data-serde = { version = "0.1.0", path = "../stm32-data-serde" }
ref_thread_local = "0.1.1"
log = "0.4.17"
pretty_env_logger = "0.4.0"
