[package]
name = "stm32-data-gen"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rayon"]
rayon = ["dep:rayon"]

[dependencies]
anyhow = "1.0.101"
glob = "0.3.3"
num = "0.4.3"
quick-xml = { version = "0.26.0", features = ["serialize"] }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "=0.9.34-deprecated"
chiptool = { workspace = true }
serde_json = "1.0.149"
rayon = { version = "1.11.0", optional = true }
stm32-data-serde = { version = "0.1.0", path = "../stm32-data-serde" }
ref_thread_local = "0.1.1"
log = "0.4.29"
pretty_env_logger = "0.5.0"
clap = { version = "4.5", features = ["derive"] }
