[package]
name = "stm32-data-serde"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }

[dev-dependencies]
itertools = "0.10.5"
rayon = "1.5.3"
serde_json = "1.0.87"
