[package]
name = "stm32-data-serde"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
regex = "1.12.3"
ref_thread_local = "0.1.1"

[dev-dependencies]
itertools = "0.10.5"
rayon = "1.11.0"
serde_json = "1.0.149"
