[package]
name = "stm32-metapac-gen"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"


[dependencies]
regex = "1.7.1"
chiptool = { workspace = true }
serde = { version = "1.0.157", features = [ "derive" ] }
serde_json = "1.0.94"
proc-macro2 = "1.0.52"
stm32-data-macros = { version = "0.1.0", path = "../stm32-data-macros" }
