[package]
name = "stm32-metapac-gen"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"


[dependencies]
regex = "1.12.3"
chiptool = { workspace = true }
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.149"
proc-macro2 = "1.0.106"
stm32-data-macros = { version = "0.1.0", path = "../stm32-data-macros" }
