[package]
name = "stm32-metapac-gen"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[features]
default = ["rayon"]
rayon = ["dep:rayon"]

[dependencies]
regex = "1.12.3"
chiptool = { workspace = true }
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.149"
proc-macro2 = "1.0.106"
stm32-data-macros = { version = "0.1.0", path = "../stm32-data-macros" }
rayon = { version = "1.11.0", optional = true }
blake3 = "1.8.5"
glob = "0.3.3"
itertools = "0.14.0"
lazy-regex = "3.6.0"
